[package]
name = "typst_tikz"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
rust_tikz = { version = "0.1.0", path = "../rust_tikz" }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
#rust_tikz = { path = "../rust_tikz" }
